# workdir2

./: .gitignore
server/: Brygga.pem  aws-connect.sh  aws-install.sh  dev.sh  docker-imgopt.yml  install-wp.sh  pods.json  prod-dev.sh  prod.sh  restore.sh  wp.sh
server/base/: docker-backup.yml  docker-compose.yml  docker-reimage.yml
server/base/backup/: Dockerfile  cron-job.sh  crontab  lib.sh  restore.sh
server/base/db-proxy/: Dockerfile
server/base/mysql-custom/: Dockerfile  wp.cnf
server/base/wp-cli/: Dockerfile
server/dev/: docker-compose.dev.yml
server/dev/proxy-dev/: Dockerfile  build.sh
server/dev/wp-dev/: Dockerfile  custom-entrypoint.sh
server/image-optim-server/: Dockerfile  config.yml  server.py
server/imagemagick-server/: Dockerfile  server.py
server/prod/: docker-compose.prod.yml
server/prod/proxy-prod/: Dockerfile  build.sh
server/prod/wp-prod/: Dockerfile  custom-entrypoint.sh
tools/: Cargo.toml
tools/cli/: Cargo.toml  build.rs  build.sh
tools/cli/src/: aws.rs  cli.rs  cli_app.rs  docker.rs  git.rs  main.rs  project.rs  server.rs  utils.rs  workspace.rs  wp.rs
tools/frontend/: Cargo.toml
tools/frontend/app/: index.html
tools/frontend/src/: ast.rs  main.rs  parse_utils.rs  parser.rs
tools/mysql-proxy/: Cargo.toml  release.sh
tools/mysql-proxy/src/: main.rs
tools/mysql-utils/: .gitignore  Cargo.toml
tools/mysql-utils/examples/: json_tables.rs  sexpr_tables.rs
tools/mysql-utils/src/: er.rs  lib.rs  table_def.rs
tools/mysql-utils/src/coltypes/: bincol.rs  boolcol.rs  datecol.rs  datetimecol.rs  floatcol.rs  intcol.rs  mod.rs  strcol.rs  timecol.rs  uintcol.rs
tools/proxy/: Cargo.toml  build.sh
tools/proxy/src/: chunked_file.rs  main.rs  proxy.rs  search.rs  util.rs
tools/rusc/: Cargo.toml
tools/rusc/scripts/: minjs.rsc  test.rsc
tools/rusc/src/: expr.rs  file.rs  item.rs  main.rs  stmt.rs
tools/scratchpad/src/: main.rs
tools/ser_utils/: Cargo.toml
tools/ser_utils/src/: json.rs  lib.rs  php.rs  php_json.rs  sexpr.rs
tools/wp-cli-server/: Cargo.toml  release.sh
tools/wp-cli-server/src/: cmd_actor.rs  main.rs  ws_actor.rs
tools/xdebug-proxy/: Cargo.toml  vagrant-build.sh
tools/xdebug-proxy/src/: main.rs
