[package]
name = "project-api"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"
workspace = ".."
build = "build.rs"

[build-dependencies]
clap = "2.33.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = { version="1.0.40", features=["preserve_order"] }
serde-hjson = "0.9.0"
serde_yaml = "0.8"
dirs = "2.0.2"
git2 = "0.9"
ssh2 = "0.3"
graphql_client = "0.8.0"
awc = "0.2.3"
actix = "0.8.3"
actix-codec = "0.1.2"
env_logger = "0.6"
actix-rt = "0.2.4"
actix-web = { version="1.0.5", features=["ssl"] }
#tokio = "0.1.22"
futures = "0.1.28"
console = "0.7.7"
dialoguer = "0.4.0"
indicatif = "0.11.0"
ctrlc = "3.1.3"
shared_child = "0.3.3"
rusoto_credential = "0.40.0"
rusoto_core = "0.40.0"
rusoto_ec2 = "0.40.0"
chrono = "0.4.7"
terminal_size = "0.1.8"
termion = "1.5.3"
failure = "0.1.5"
failure_derive = "0.1"
walkdir = "2.2.9"
tar = "0.4.26"
zip = "0.5.3"
mysql_utils = { path="../mysql-utils" }