[package]
name = "mysql-proxy"
version = "0.1.0"
authors = ["brygga-dev <52463886+brygga-dev@users.noreply.github.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msql-srv = { path = "../vendor/msql-srv" }
mysql = "16.1.0"
