[package]
name = "mysql_utils"
version = "0.1.0"
authors = ["brygga-dev <52463886+brygga-dev@users.noreply.github.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "16.1"
nom-sql = "0.0.8"
indexmap = "1.1"
base64 = "0.10"
chrono = "0.4"
ser_utils = { path = "../ser_utils" }