[package]
name = "proxy"
version = "0.1.0"
authors = ["Goodcode <15660898+goodcodedev@users.noreply.github.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-rt = "0.2.3"
awc = "0.2.2"
actix-web = { version="1.0.3", features=["ssl"] }
actix-http = "0.2.5"
actix-cors = "0.1.0"
actix-multipart = "0.1.2"
actix-files = "0.1.3"
mime = "0.3"
mime_guess = "2.0.0-alpha.6"
futures = "0.1.28"
serde = "1.0.94"
serde_json = "1.0.40"
serde_urlencoded = "0.5.5"
chrono = "0.4.7"
tantivy = "0.9.1"
clap = "2.33.0"
openssl = { version="0.10" }
